--- a/src/components/RecipeDetails/RecipeDetails.css
+++ b/src/components/RecipeDetails/RecipeDetails.css
@@ -1,66 +1,110 @@
 .RecipeDetails {
-	display: flex;
-	width: 80%;
-	margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.RecipeDetailsImgContainer {
+    width: 90%;
+    margin: 0 auto;
 }
 
 .RecipeDetailsImage {
-	width: 35%;
-	object-fit: cover;
-	height: 60%;
-	margin-right: 1rem;
-	border: 2px solid #fff;
-	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3);
-	transform: rotate(-2deg);
+    width: 100%;
+    margin-bottom: 1rem;
+    object-fit: cover;
+    border: 2px solid #fff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3);
+    transform: rotate(-2deg);
+}
+
+.BackButton {
+    color: #ee4540;
+    text-decoration: underline;
+    cursor: pointer;
+    margin-bottom: 1rem;
+}
+
+.RecipeInformation {
+    width: 100%;
 }
 
 .RecipeTitle {
-	margin-bottom: 1rem;
-	color: #ee4540;
+    margin-bottom: 1rem;
+    color: #ee4540;
 }
 
-.RecipeCategory {
-	margin-bottom: 1rem;
+.RecipeCategory,
+.RecipeOrigin {
+    margin-bottom: 1rem;
+}
+
+.RecipeCategory a,
+.RecipeOrigin a {
+    color: inherit;
 }
 
 .SubHeading {
-	margin-bottom: 0.5rem;
-	color: #510a32;
+    margin-bottom: 0.5rem;
+    color: #510a32;
 }
 
 .IngredientsTable {
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 .IngredientsTable th {
-	text-align: left;
-	background-color: #e7e7e7;
-	color: #510a32;
+    text-align: left;
+    background-color: #e7e7e7;
+    color: #510a32;
 }
 
 .IngredientsTable th,
 .IngredientsTable td {
-	padding: 0.5rem;
+    padding: 0.5rem;
 }
 
 .IngredientsTable tr {
-	border-bottom: 1px solid #ccc;
-	background-color: #f7f7f7;
+    border-bottom: 1px solid #ccc;
+    background-color: #f7f7f7;
 }
 
 .RecipeInstructions {
-	margin-bottom: 1rem;
-	text-align: justify;
+    margin-bottom: 1rem;
+    text-align: justify;
+}
+
+.RecipeTags {
+    margin-bottom: 1rem;
 }
 
 .RecipeCategory h3,
+.RecipeOrigin h3,
 .RecipeTags h3 {
-	display: inline-block;
-	color: #510a32;
+    display: inline-block;
+    color: #510a32;
 }
 
 .RecipeTutorial {
-	margin-bottom: 1rem;
-	width: 100%;
-	min-height: 20rem;
+    margin-bottom: 1rem;
+    width: 100%;
+    min-height: 20rem;
+}
+
+@media(min-width: 720px) {
+    .RecipeDetailsImgContainer {
+        width: 60%;
+        margin: 0 auto;
+        margin-bottom: 1rem;
+    }
+}
+
+@media(min-width: 992px) {
+    .RecipeDetailsImgContainer {
+        width: 35%;
+    }
+    .RecipeInformation {
+        width: 60%;
+    }
 }
