--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -6,22 +6,24 @@
 .SearchLabel {
     display: block;
     font-weight: 700;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     font-size: 1.2rem;
 }
 
 .SearchTerm {
-    padding: .5rem;
+    padding: 0.5rem;
     border: 1px solid #510a32;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     outline: none;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
     font: inherit;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .SearchTerm:focus {
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    border-color: #801336;
+    border-width: 2px;
 }
 
 .SearchButton {
@@ -30,8 +32,19 @@
     outline: none;
     color: #f7f7f7;
     font: inherit;
-    padding: .5rem;
-    border-radius: .5rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
     cursor: pointer;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease-in-out;
+}
+
+.SearchButton:hover {
+    background-color: #801336;
+    border-color: #801336;
+}
+
+.SearchButton:active {
+    transform: translateY(1px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
