--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,19 @@ body {
 
 .BackButton,
 .HomeButton {
-    color: #ee4540;
-    text-decoration: underline;
     cursor: pointer;
 	margin-bottom: 1rem;
 	display: inline-block;
 	margin-right: 1rem;
+}
+
+.Link {
+    color: #ee4540;
+    text-decoration: none;
+    transition: all .3s ease-in-out;
+}
+
+.Link:hover {
+    color: #c72c41;
+    border-bottom: 1px solid #c72c41;
 }
