--- a/src/components/FilteredRecipes/RecipeListItem/RecipeListItem.css
+++ b/src/components/FilteredRecipes/RecipeListItem/RecipeListItem.css
@@ -1,24 +1,32 @@
 .RecipeListItem {
-    width: 100%;
-    display: flex;
-    border-radius: .5rem;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3);
-    justify-content: center;
-    margin-bottom: 1rem;
-    overflow: hidden;
+	width: 100%;
+	display: flex;
+	border-radius: 0.5rem;
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+	justify-content: center;
+	margin-bottom: 1rem;
+	overflow: hidden;
+	background-color: #f5f5f5;
+	transition: all 0.3s ease-in-out;
+}
+
+.RecipeListItem:hover {
+	background-color: #fff;
+	transform: scale(1.01);
+	box-shadow: 0 0.55rem 1.05rem rgba(0, 0, 0, 0.3);
 }
 
 .RecipeListBody {
-    padding: 1rem;
-    width: 100%;
+	padding: 1rem;
+	width: 100%;
 }
 
-.RecipeListTitle {
-    color: #ee4540;
+.RecipeListTitle .Link {
+	color: #ee4540;
 }
 
 .RecipeListImg {
-    max-height: 8rem;
+	max-height: 8rem;
 	object-fit: cover;
 	display: block;
 }
